Avoid overflow of fixed header title and center it with truncated text

--- a/scss/partials/_fullscreen_topic.scss
+++ b/scss/partials/_fullscreen_topic.scss
@@ -99,6 +99,12 @@ div.fullscreen-topic {
           font-family: $oc_headers_font;
           font-size: 25px;
           padding-top: 16px;
+          overflow: hidden;
+          text-overflow: ellipse;
+          width: 80%;
+          position: absolute;
+          left: 50%;
+          margin-left: -40%;
         }
 
         button.close-fullscreen-topic-btn {
