--- a/scss/partials/_su_snapshot.scss
+++ b/scss/partials/_su_snapshot.scss
@@ -25,6 +25,12 @@ div.su-snapshot {
       font-family: $oc_headers_font;
       font-size: 25px;
       padding-top: 16px;
+      overflow: hidden;
+      text-overflow: ellipse;
+      width: 80%;
+      position: absolute;
+      left: 50%;
+      margin-left: -40%;
     }
 
     button.close-su-btn {
